johncollins-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: johncollins
  namespace: default
spec:
  selector:
    matchLabels:
      run: johncollins
  template:
    metadata:
      labels:
        run: johncollins
    spec:
      containers:
      - image: asia-southeast1-docker.pkg.dev/johncollins/johncollins/johncollins:v0.15.0
        imagePullPolicy: IfNotPresent
        name: johncollins
        ports:
        - containerPort: 8080
          protocol: TCP
