hfd-web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hfd
  namespace: default
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    run: hfd
  type: NodePort
