johncollins-deploymentsandservices.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: johncollins
  namespace: default
spec:
  selector:
    matchLabels:
      run: johncollins
  template:
    metadata:
      labels:
        run: johncollins
    spec:
      containers:
      - image: asia-southeast1-docker.pkg.dev/johncollins/johncollins/johncollins:v0.3.44
        imagePullPolicy: IfNotPresent
        name: johncollins
        ports:
        - containerPort: 8080
          protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: johncollins
  namespace: default
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    run: johncollins
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dlf-voila
  namespace: default
spec:
  selector:
    matchLabels:
      run: dlf-voila
  template:
    metadata:
      labels:
        run: dlf-voila
    spec:
      containers:
      - image: asia-southeast1-docker.pkg.dev/johncollins/dlf-voila/deep-learning-finance:v0.1.15
        imagePullPolicy: IfNotPresent
        name: dlf-voila
        ports:
        - containerPort: 8080
          protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: dlf-voila
  namespace: default
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    run: dlf-voila
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dlf-flask
  namespace: default
spec:
  selector:
    matchLabels:
      run: dlf-flask
  template:
    metadata:
      labels:
        run: dlf-flask
    spec:
      containers:
      - image: asia-southeast1-docker.pkg.dev/johncollins/dlf-flask/dlf:v0.1.13
        imagePullPolicy: IfNotPresent
        name: dlf-flask
        ports:
        - containerPort: 8080
          protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: dlf-flask
  namespace: default
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    run: dlf-flask
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: foo
  namespace: default
spec:
  selector:
    matchLabels:
      run: foo
  template:
    metadata:
      labels:
        run: foo
    spec:
      containers:
      - image: asia-southeast1-docker.pkg.dev/johncollins/johncollins/johncollins:v0.15.0
        imagePullPolicy: IfNotPresent
        name: foo
        ports:
        - containerPort: 8080
          protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: foo
  namespace: default
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    run: foo
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lstm
  namespace: default
spec:
  selector:
    matchLabels:
      run: lstm
  template:
    metadata:
      labels:
        run: lstm
    spec:
      containers:
      - image: asia-southeast1-docker.pkg.dev/johncollins/lstm/lstm:v0.1.3
        imagePullPolicy: IfNotPresent
        name: h-w
        ports:
        - containerPort: 8080
          protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: lstm
  namespace: default
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    run: lstm
  type: NodePort
