johncollins-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: johncollins-service
spec:
  type: NodePort
  selector:
    greeting: hello
    version: one
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
