basic-ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: basic-ingress-nginx
spec:
  defaultBackend:
    service:
      name: foo
      port:
        number: 8080
