hello-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: johncollins-ingress-resource
  namespace: nginx
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /hello-app
        pathType: Prefix
        backend:
          service:
            name: hello-app
            port:
              number: 8080
