hfd-fanout-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hfd-fanout-ingress
spec:
  rules:
  - http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: web
            port:
              number: 8080
      - path: /high-frequency-data/*
        pathType: ImplementationSpecific
        backend:
          service:
            name: hfd
            port:
              number: 8080
