johncollins-ingress-static.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: johncollins-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "web-static-ip"
    networking.gke.io/managed-certificates: managed-cert
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
  - http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: johncollins
            port:
              number: 8080
      - path: /foo
        pathType: ImplementationSpecific
        backend:
          service:
            name: foo
            port:
              number: 8080
      - path: /h-w
        pathType: ImplementationSpecific
        backend:
          service:
            name: h-w
            port:
              number: 8080
